--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-fastapi==0.104.1
+fastapi==0.109.1
 uvicorn==0.24.0
 python-dotenv==1.0.0
-openai==1.3.5
-pydantic==2.4.2
+openai==1.40.0
+pydantic==2.9.2
 python-multipart>=0.0.9
-gradio==4.19.2
+gradio==4.44.1
 httpx==0.26.0
-langsmith==0.0.77
-langchain==0.1.12
+langsmith>=0.1.112,<0.2.0
+langchain>=0.2.0
+backoff==1.11.1
+langchain-openai>=0.1.25
+langchain-core>=0.2.40
