增加embedding模型调用&增加RAG链

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # DeepSeek配置
 DEEPSEEK_API_KEY=your_deepseek_api_key_here
+DASHSCOPE_API_KEY=your_dashscope_api_key_here
 
 # GPT2本地服务配置
 GPT2_SERVICE_URL=http://localhost:8018
