chore(env): 更新 env.example

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ GPT2_SERVICE_URL=http://localhost:8018
 
 # LangSmith配置
 LANGCHAIN_TRACING_V2=true
-LANGCHAIN_ENDPOINT=https://api.smith.langchain.com
-LANGCHAIN_API_KEY=your_langsmith_api_key_here
-LANGCHAIN_PROJECT=your_project_name_here
-LANGCHAIN_ENV=development 
+LANGCHAIN_ENDPOINT="https://api.smith.langchain.com"
+LANGCHAIN_API_KEY="your_langsmith_api_key_here"
+LANGCHAIN_PROJECT="your_project_name_here"
+LANGCHAIN_ENV="development"
